# bept

./: Cargo.toml  build.rs  resources.rc
src/: _extract.rs  _load.rs  _main.rs  _resolve.rs  _utils.rs  _verify_firpe.rs  add.rs  init.rs  init_env.rs  lang_zhCN.rs  load.rs  main.rs  search.rs  test.rs  types.rs  update.rs
tests/: base.toml  registry.toml
