[package]
name = "bept"
version = "0.1.0"
authors = ["Oxygen <3038094028@qq.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libept = { path = "../libept" }
sysinfo = "0.15"
registry = "1.1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
indicatif = "0.15.0"
colorful = "0.2.1"
clap = "2.33.3"
proctitle = "0.1.1"
toml = "0.5.8"
thiserror = "1.0"
snailquote = "0.3.0"
reqwest = { version = "0.11", features = [
  "brotli",
  "gzip",
  "cookies",
  "multipart",
  "json",
  "default-tls",
  "blocking"
] }
serde = { version = "1.0", features = ["derive"] }
rust-crypto = "0.2"
base64 = "0.13"
url = "2.2"
read_input = "0.8.4"
regex = "1.4.3"
rust7z = { git = "https://github.com/im-oxygen/rust7z.git", branch = "master" }
subprocess = "0.2.6"

[build-dependencies]
embed-resource = "1.4.0"

[profile.release]
lto = true
